2004-02-14  Christian Stimming  <stimming@tuhh.de>

	* configure.in: Require the correct openhbci2 version. Add verbose
	error message for the currently unavailable mt940 support.

	* src/import-export/hbci/hbci-druid-initial.c, gnc-hbci-utils.c:
	Finally finish openhbci2 support, phew. Requires
	openhbci2-1.9beta7 from http://sourceforge.net/projects/openhbci

2004-02-04  Derek Atkins  <derek@ihtfp.com>

	* src/business/business-core/gncJob.c: Linas checked the wrong
	  argument in SetOwner() in revision 1.40 thereby causing ALL new
	  jobs to fail to work.  Check the new owner, not the original.
	  Fixes #133392.

2004-01-31  Christian Stimming  <stimming@tuhh.de>

	* src/engine/gnc-commodity.c, src/engine/iso-4217-currencies.scm:
	Change Ukrainian "UAG" into "UAH" #128913

	* src/import-export/import-backend.c: Commented out setting the
	memo always to "Auto-created split" due to popular request.

	* src/import-export/hbci/druid-hbci-initial.c, hbci-interaction.c,
	all files: Preliminary completion of openhbci2 support -- getting
	the transactions seems to work, as well as the HBCI setup.

	* src/engine/kvp_frame.h, src/engine/Account.c: Add clear notice
	of the semantic change of kvp_frame_get_frame
	function. Fortunately it seems the only place that still had to be
	fixed, apart from the hbci module, has been in Account.c.

	* src/import-export/import-account-matcher.h: Make string argument
	a const char*. Make boolean argument a gboolean.

2004-01-30  Derek Atkins  <derek@ihtfp.com>

	* src/register/ledger-core/split-register-layout.c:  Remove the
	  RECN cell from payable/receivable to stop confusing people.

2004-01-21  Christian Stimming  <stimming@tuhh.de>

	* src/import-export/hbci/gnc-hbci-utils.c: Set application log
	directory, needs more work.
	* src/import-export/hbci/druid-hbci-utils.c:
	More work for openhbci2 support.

2004-01-20  Christian Stimming  <stimming@tuhh.de>

	* configure.in, macros/openhbci2.m4: Add checking for new